--- a/src/components/Todolist/todolist.css
+++ b/src/components/Todolist/todolist.css
@@ -18,7 +18,7 @@
   font-size: xx-large;
 }
 .todoList-TitleContainer h1 {
-  color: #ededed;
+  color: #dbd9db;
 }
 
 .todoList-TitleContainer h1 span {
