--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,23 +1,38 @@
 .addTaskForm {
-  margin: 4rem 0;
+  margin: 2rem 0;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
 }
 
+.form-inputs {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+}
 .addTaskForm input {
-  background-color: #ededed;
-  border: 1px solid rgb(28, 61, 49);
-  font-size: 1.5em;
-  width: 40%;
-  padding: 1em;
+  border: 1px solid #dd9b99;
+  font-size: 1em;
+  width: 45%;
+  padding: 1rem;
   font-weight: bold;
   font-size: x-large;
+  color:#324150;
+  border-radius:5px;
 }
 
 .addTaskForm button {
-  width: 20%;
-  background-color: #3f88c5;
+  width: 30%;
+  padding: 1% 2%;
+  background-color: #b2c6ab;
+  border: 1px solid #dd9b99;
   font-size: x-large;
   color: white;
-  justify-self: flex-end;
+  margin-top: 3%;
+}
+
+.addTaskForm button:hover{
+  background-color: #dd9b99;
+  cursor: pointer;
 }
